--- a/index.html
+++ b/index.html
@@ -416,15 +416,15 @@
             <form>
                 <div class="form-field">
                     <label for="name" class="form-label">Name:</label><br>
-                    <input type="text" id="name" class="field" name="name" required><br>
+                    <input type="text" id="name" class="field" name="name" placeholder="John Doe" required><br>
                 </div>
                 <div class="form-field">
                     <label for="email" class="form-label">Email:</label><br>
-                    <input type="email" id="email" class="field" name="email" required><br>
+                    <input type="email" id="email" class="field" name="email" placeholder="johndoe@hotmail.com" required><br>
                 </div>
                 <div class="form-field">
                     <label for="" class="form-label">Message:</label><br>
-                    <textarea class="field" rows="5" cols="40" id="message"></textarea>><br>
+                    <textarea class="field" rows="5" cols="40" id="message" placeholder="I am interested in joining your club"></textarea><br>
                 </div>
                 <div class="form-field">
                     <button class="form-label">Send</button>
