--- a/index.html
+++ b/index.html
@@ -432,6 +432,28 @@
             </form>
         </div>
     </section>
+
+    <section>
+        <h2 id="footer-text">Follow Us and Our Successess on Our Social Media:</h2>
+    </section>
+
+    <section id="footer">
+        <div>
+            <h2>Facebook <i class="fab fa-facebook"></i></h2>
+        </div>
+        <div>
+            <h2>Twitter <i class="fab fa-twitter"></i></h2>
+        </div>
+        <div>
+            <h2>Instagram <i class="fab fa-instagram"></i></h2>
+        </div>
+        <div>
+            <h2>YouTube <i class="fab fa-youtube"></i></h2>
+        </div>
+        <div>
+            <h2>Pinterest <i class="fab fa-pinterest"></i></h2>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
