--- a/index.html
+++ b/index.html
@@ -437,6 +437,9 @@
         <h2 id="footer-text">Follow Us and Our Successess on Our Social Media:</h2>
     </section>
 
+    <section>
+        <img id="footer-image" src="images/footer-image.jpeg">
+    </section>
     <section id="footer">
         <div>
             <h2>Facebook <i class="fab fa-facebook"></i></h2>
