--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     is a 50m pool that can be converted to a 25m pool, which means we can focus on stamina and endurance, whilst at the same
                     time getting our swimmers used to swimming in a 50m pool, as well as the standard 25m. 
                     <br>
-                    Our other training location is Valance School pool, which is a standard 25m pool. 
+                    Our other training locations are Valance School pool and Monson School Pool, which are both standard 25m pools. 
                 </p>
                 <p>
                     We hold regular trial nights which we use to assess our swimmers times and let us know how they are doing in terms of
