--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="images/">
+    <link rel="icon" href="images/favicon.jpg" type="image/x-icon">
     <title>MONSON SWIMMING CLUB</title>
 </head>
 <body>
