--- a/index.html
+++ b/index.html
@@ -481,19 +481,19 @@
     <!--Footer divs containing social links-->
     <section id="footer">
         <div>
-            <h2>Facebook <i class="fab fa-facebook"></i></h2>
+            <h2>Facebook<a class="social-link" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></a></i></h2>
         </div>
         <div>
-            <h2>Twitter <i class="fab fa-twitter"></i></h2>
+            <h2>Twitter<a class="social-link" href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></a></i></h2>
         </div>
         <div>
-            <h2>Instagram <i class="fab fa-instagram"></i></h2>
+            <h2>Instagram<a class="social-link" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></a></i></h2>
         </div>
         <div>
-            <h2>YouTube <i class="fab fa-youtube"></i></h2>
+            <h2>YouTube<a class="social-link" href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></a></i></h2>
         </div>
         <div>
-            <h2>Pinterest <i class="fab fa-pinterest"></i></h2>
+            <h2>Pinterest<a class="social-link" href="https://www.pinterest.com/" target="_blank"><i class="fab fa-pinterest"></a></i></h2>
         </div>
     </section>
 
